--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
 }
 
 .flavor, .dessert {
