--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 
 .menu {
     width: 80%;
+    max-width: 500px;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
