--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ h1, h2, p {
     text-align: center;
 }
 
+h1, h2 {
+    font-family: Impact serif;
+}
 
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
