--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,12 @@ body {
     font-style: italic;
 }
 
+hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+}
+
 .menu {
     width: 80%;
     max-width: 500px;
