--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ h2 {
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
 }
 
 .established {
@@ -50,4 +51,7 @@ hr {
 
 .item p {
     display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
 }
