--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ h2 {
     font-size: 30px;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
